feat: search products by id
